--- a/script/index.html
+++ b/script/index.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pesquisa de fotos</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div id="app">
         <h1>Encontre imagens do Flickr</h1>
-        <form>
-            <input type="text" placeholder="Encontre sua imagem">
-            <button type="submit">Pesquisar</button>
+        <form class="search-form">
+            <input class="search-input" type="text" placeholder="Encontre sua imagem">
+            <button class="get0-results--button" type="submit">Pesquisar</button>
         </form>
+        <div id="results">
+            
+        </div>
     </div>
+    <script src="/script/app.js"></script>
 </body>
 </html>
